Final home page enhancements and mobile polish

--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Primary SEO -->
+    <title>SBB Management Services | Integrated Business Solutions</title>
+    <meta
+      name="description"
+      content="SBB Management Services Private Limited provides integrated business solutions including supply, logistics, consultancy, training, event management, and manpower services."
+    />
+    <meta
+      name="keywords"
+      content="SBB Management Services, business support services, logistics services, manpower supply, IT supply, consultancy services, event management"
+    />
+    <meta name="author" content="SBB Management Services Private Limited" />
+
+    <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sbb-management-website</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Open Graph (Social Media) -->
+    <meta property="og:title" content="SBB Management Services" />
+    <meta
+      property="og:description"
+      content="Reliable and professional integrated business support services."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.sbbmanagement.com" />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SBB Management Services" />
+    <meta
+      name="twitter:description"
+      content="Integrated business support services for modern organizations."
+    />
+
   </head>
   <body>
     <div id="root"></div>
